tests/ast/snapshots/r#mod__ast__variables__should_assign_f32-3.snap
---
source: tests/ast/variables.rs
expression: "ast_from_code_str(r#\"a: f32 = .2\"#,\n    \"variables/should_assign_f32/prefix_missing\")"
---
[
    Variable {
        var_type: F32,
        name: "a",
        value: LiteralF32(
            0.2,
        ),
        location: 0..0,
    },
]
