tests/ast/snapshots/r#mod__ast__variables__should_assign_f32-4.snap
---
source: tests/ast/variables.rs
expression: "ast_from_code_str(r#\"a: f32 = 14.0f32\"#,\n    \"variables/should_assign_f32/default_with_type\")"
---
[
    Variable {
        var_type: F32,
        name: "a",
        value: LiteralF32(
            14.0,
        ),
        location: 0..0,
    },
]
