tests/ast/snapshots/r#mod__ast__variables__should_assign_f32-6.snap
---
source: tests/ast/variables.rs
expression: "ast_from_code_str(r#\"a: f32 = 2.f32\"#,\n    \"variables/should_assign_f32/suffix_missing_with_type\")"
---
[
    Variable {
        var_type: F32,
        name: "a",
        value: LiteralF32(
            2.0,
        ),
        location: 0..0,
    },
]
