tests/ast/snapshots/r#mod__ast__variables__should_assign_f32.snap
---
source: tests/ast/variables.rs
expression: "ast_from_code_str(r#\"a: f32 = 12.0\"#, \"variables/should_assign_f32/default\")"
---
[
    Variable {
        var_type: F32,
        name: "a",
        value: LiteralF32(
            12.0,
        ),
        location: 0..0,
    },
]
