tests/ast/snapshots/r#mod__ast__variables__should_assign_f64-4.snap
---
source: tests/ast/variables.rs
expression: "ast_from_code_str(r#\"a: f64 = 1f64\"#,\n    \"variables/should_assign_f64/decimal_with_type\")"
---
[
    VariableDeclaration(
        Variable {
            var_type: F64,
            name: "a",
            value: Operand(
                LiteralF64(
                    1.0,
                ),
            ),
            location: 0..0,
        },
    ),
]
